--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
   "scripts": {
     "start": "npx serve ."
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "vercel": "^28.0.0"
+  }
 }
