--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "npx serve ."
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "vercel": "^28.0.0"
